Snippet fadeout to background color to avoid overflow

--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -13,3 +13,7 @@ h1 {
 .hidden {
   display: none;
 }
+
+blockquote {
+  margin: 0; padding: 0;
+}
