--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -10,7 +10,7 @@ body {
   font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   margin: 0; padding: 0;
 
-  background: #d325ea;
+  background: @backgroundColor;
   background: linear-gradient(45deg,  #32fcf9 0%,#d325ea 32%,#f72e2e 58%,#eeff00 100%);
 }
 
@@ -58,21 +58,30 @@ body {
     margin: 0; padding: 0;
 
     .document-snippet {
-      min-height: 60px; max-height: 100px;
-      overflow: ellipsis;
-      margin-bottom: 10px;
-      padding: 5px;
+      position: relative;
+      height: 80px;
+      overflow: hidden;
+      margin-bottom: 10px; padding: 5px;
       background-color: @snippetBackgroundColor;
 
       &:hover {
         background-color: @highlightBackgroundColor;
       }
 
+      &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        bottom: 0; left: 0; right: 0;
+        height: 1 * @lineHeight;
+        background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, @backgroundColor 100%);
+      }
+
       aside {
         float: left;
       }
       img {
-        width: 50px;
+        height: 80px;
         margin-right: 10px;
       }
     }
